# zanto-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  hello.txt  install.sh  known_issues.md  trd.md
.claude/commands/: dev.md  execute.md  spec.md
.github/workflows/: ci.yml  release.yml  site.yml  test.yml
crates/zanto-cli/: Cargo.toml
crates/zanto-cli/src/: main.rs
crates/zanto-cli/tests/: e2e.rs
crates/zanto-core/: Cargo.toml
crates/zanto-core/src/: chat.rs  config.rs  context.rs  lib.rs  main.rs  permissions.rs  session.rs  summarize.rs
crates/zanto-core/src/artifacts/: mod.rs
crates/zanto-core/src/data/: mod.rs
crates/zanto-core/src/tools/: mod.rs
crates/zanto-core/src/tools/artifacts/: list_stored_artifacts.rs  mod.rs  read_stored_artifact.rs  store_artifact.rs
crates/zanto-core/src/tools/docs/: mod.rs  parse_table.rs  read_document.rs
crates/zanto-core/src/tools/fs/: edit_file.rs  list_directory.rs  mod.rs  read_file.rs  search_files.rs  write_file.rs
crates/zanto-core/src/tools/shell/: mod.rs  run_command.rs
crates/zanto-core/src/tools/web/: fetch_url.rs  mod.rs
crates/zanto-desktop/: .gitignore  Cargo.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tauri.conf.json  vite.config.js
crates/zanto-desktop/src-tauri/: Cargo.toml  catalogue.json  tauri.conf.json
crates/zanto-desktop/src-tauri/capabilities/: default.json
crates/zanto-desktop/src-tauri/src/: app.rs  approver.rs  catalogue.rs  interaction.rs  ipc.rs  lib.rs  main.rs
crates/zanto-desktop/src-tauri/src/apps/: mod.rs
crates/zanto-desktop/src-tauri/src/apps/chat/: mod.rs
crates/zanto-desktop/src-tauri/src/apps/finance/: aggregate.rs  import.rs  mod.rs  schema.rs  tests.rs
crates/zanto-desktop/src-tauri/src/ipc/: apps.rs  artifacts.rs  chat.rs  config.rs  files.rs  finance.rs  mod.rs  session.rs  skills.rs
crates/zanto-desktop/src-tauri/tests/: contract.rs
docs/: backlog.md  feature-roadmap.md  product.md  release-smoke.md  working-flows.md  zanto-test-checklist.csv
docs/architecture/: data-model.md  llm.md  modules.md  overview.md  permissions.md  stack-flow.md  tools.md
docs/archive/: 2026-06-13-data-layer.md  2026-06-17-a3-artifact-store.md  2026-06-17-a5-stream-segments.md  2026-06-17-b1-modularize-ipc.md  2026-06-17-link-handling.md  2026-06-17-tauri-polish.md  2026-06-17-theme-color-revert.md  2026-06-17-thinking-block.md  2026-06-17-wave-c-chat-ux.md  2026-06-17-wave-e-artifacts-tools.md  2026-06-17-wave-f-finance.md  2026-06-18-finance-v0.4-import-accounts.md  2026-06-19-dynamic-genai-provider-settings-plan.md  2026-06-19-dynamic-genai-provider-settings.md  2026-06-21-split-bridge-testing.md  2026-06-22-chat-ui-test-automation.md  2026-06-22-regression-test-automation.md  2026-06-24-batch-b-core-fixes.md  2026-06-24-batch-c-composer-keyboard-plan.md  2026-06-24-market-validation-framework.md  2026-06-25-artifact-actions-delete-and-message-bar.md  2026-06-25-system-prompt-nondisclosure-guardrail.md  2026-06-28-release-distribution-linux-rpm-macos-gatekeeper.md  2026-06-28-release-matrix-and-human-readable-packages.md  2026-06-28-token-counter.md  2026-06-29-chat-bubble-restyle.md  2026-06-29-flatten-agent-blocks.md  2026-06-29-html-page-artifacts.md  2026-06-29-linux-tarball-replace-appimage.md  2026-06-29-message-loader.md  2026-06-29-skills-editor.md  2026-07-01-desktop-config-writable-base.md  README.md  agent-branches-archived-2026-06-18.md  micro-app-architecture.md  plans-2026-06-25-document-render-store-flow.md  plans-2026-06-25-render-only-artifacts-and-panel-tabs.md  release-smoke.md  sample-statement.csv  sp-2026-06-18-charts-and-csv-fixes.md  (+1 more)
docs/plans/: 2026-06-18-remediation-plan.md  2026-06-25-artifact-actions-delete-and-message-bar.md
docs/product/: finance-next-version-plan.md  finance-v1-plan.md
docs/reviews/: 2026-06-18-finance-code-review.md
docs/specs/: 2026-06-17-a1-provider-keys.md  2026-06-17-a2-session-lifecycle.md  2026-06-17-a4-context-skills.md  2026-06-17-artifact-persistence-model.md  2026-06-17-b2-chat-segments.md  2026-06-17-b3-settings-providers-ui.md  2026-06-17-chat-interrupt-queue.md  2026-06-17-document-io.md  2026-06-17-inputs-outputs-workspace.md  2026-06-17-link-handling.md  2026-06-17-theme-color-revert.md  2026-06-17-thinking-block.md  2026-06-17-wave-d-session.md  2026-06-18-finance-v0.2-trustworthy-ledger.md  2026-06-18-finance-v0.3-budgets-insight.md  2026-06-21-v1-launch-plan.md  (+22 more)
site/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
(+132 files in other folders)
