[package]
name = "zanto-cli"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "zanto"
path = "src/main.rs"

[dependencies]
zanto-core = { path = "../zanto-core" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
