[package]
name = "zanto-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "zanto_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
genai = "0.6"
rmcp = "1.7.0"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2"
globset = "0.4"
futures = "0.3"
