[package]
name = "zanto-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "zanto_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
genai = "0.6"
rmcp = "1.7.0"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2"
globset = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.5"
directories = "6"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
# Reuse the reqwest/rustls already pulled in transitively by genai (no duplicate copy).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
url = "2"

[dev-dependencies]
tempfile = "3"
