[package]
name = "zanto-core"
version = "1.0.0"
edition = "2024"

[lib]
name = "zanto_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
genai = "0.6"
rmcp = "1.7.0"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2"
globset = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.5"
directories = "6"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
# Reuse the reqwest/rustls already pulled in transitively by genai (no duplicate copy).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
url = "2"
# Document extraction for read_document. All three are pure Rust (no native/system libs):
# calamine (xlsx/xls/ods), pdf-extract (PDF text; pulls lopdf + font crates — biggest of the three),
# docx-rust (docx paragraph text via zip+xml).
calamine = "0.35"
pdf-extract = "0.10"
docx-rust = "0.1"
# csv: structured parsing of statement files for the finance import pipeline
# (headers + cells, unlike read_document which flattens to text).
csv = "1"

[dev-dependencies]
tempfile = "3"
