[package]
name = "zanto-desktop"
version = "0.1.0"
description = "zanto desktop — micro-app agentic shell"
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows linker issue).
name = "zanto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
zanto-core = { path = "../../zanto-core" }

