[package]
name = "zanto-desktop"
version = "1.0.0"
description = "zanto desktop — micro-app agentic shell"
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows linker issue).
name = "zanto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
jsonschema = "0.18"
zanto-core = { path = "../../zanto-core" }

[dev-dependencies]
tempfile = "3"

